@@ -1,5 +1,11 @@
 2006-12-05  Corinna Vinschen  <corinna@vinschen.de>
 
+	* dcrt0.cc (get_cygwin_startup_info): Fix comment.
+	* wincap.cc (wincapc::init): Always reset needs_count_in_si_lpres2 to
+	false on non 64-bit systems.
+
+2006-12-05  Corinna Vinschen  <corinna@vinschen.de>
+
 	* dcrt0.cc (get_cygwin_startup_info): Change zeros to DWORD array.
 	Expect first DWORD in child_info struct being set to non-zero if
 	wincap.needs_count_in_si_lpres2 is set.  Add comment to explain why.
